...
            text={t('jumpstartSendConfirmationScreen.confirmButton')}
            onPress={handleSendTransaction}
            size={BtnSizes.FULL}
            style={styles.button}
            showLoading={jumpstartSendStatus === 'loading'}
            disabled={jumpstartSendStatus === 'loading' || jumpstartSendStatus === 'success'}
            testID="JumpstartSendConfirmation/ConfirmButton"
          />
          <InLineNotification
            variant={NotificationVariant.Info}
            description={t('jumpstartSendConfirmationScreen.info')}
          />
        </SafeAreaView>
...
